--- a/css/style.css
+++ b/css/style.css
@@ -1,335 +1,383 @@
 /* ----------- defaults for all pages ----------- */
 
 body {
-    margin: 0px;
-    min-height: 100vh;
+  display: flex;
+  justify-content: center;
 
-    font-size: 14px;
-    font-family: monospace;
-    font-weight: 550;
+  margin: auto;
+  min-height: 100vh;
+  width: 390px;
 
-    display: flex;
-    flex-direction: column;
-    background-color: #505050;
+  font-size: 14px;
+  font-family: monospace;
+  font-weight: 550;
+
+  display: flex;
+  flex-direction: column;
+
+  background-image: url("../images/noise.png");
+  background-repeat: repeat;
+  background-position: center;
+  position: relative;
+}
+
+.phone {
+  background-color: #505050;
+  z-index: 2;
+  box-shadow: 8px 8px 0px rgba(0, 0, 0, 0.582);
+  height: 844px;
+
+  overflow-y: auto;
+}
+
+.phone::-webkit-scrollbar {
+  width: 4px; /* Very thin scrollbar */
+}
+
+.phone::-webkit-scrollbar-track {
+  background: transparent; /* Invisible track */
+}
+
+.phone::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.2); /* Faint scrollbar thumb */
+  border-radius: 10px;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #252525;
+  opacity: 0.95;
+  pointer-events: none;
+  z-index: 1;
 }
 
 h1 {
-    color: white;
+  color: white;
 }
 
 .highlight {
-    color: rgb(0, 147, 233);
-    background: none;
+  color: rgb(0, 147, 233);
+  background: none;
 }
 
 /* footer */
 
 footer {
-    height: 20px;
+  display: flex;
+  justify-content: center;
 
-    position: sticky;
+  height: 20px;
 
-    background-color: #2d2d2d;
+  position: sticky;
+
+  background-color: #2d2d2d;
 }
 
 footer h3 {
-    margin: 5px;
+  margin: 5px;
 
-    text-align: center;
-    font-size: 10px;
+  text-align: center;
+  font-size: 10px;
 
-    color: white;
+  color: white;
 }
 
 /* navigation bar */
 
 nav {
-    margin: 0px;
-    margin-top: -20px;
-    padding-bottom: 5px;
+  margin: 0;
+  margin-top: -20px;
+  padding-bottom: 5px;
+  width: 100%;
 
-    position: sticky;
-    overflow: hidden;
+  position: sticky;
+  overflow: hidden;
 
-    box-shadow: 0 4px 7px 2px rgba(0, 0, 0, 0.507);
-    background-color: #2d2d2d;
+  box-shadow: 0 4px 7px 2px rgba(0, 0, 0, 0.507);
+  background-color: #2d2d2d;
 
-    top: 0;
+  top: 0;
 }
 
 nav a {
-    text-decoration: none;
+  text-decoration: none;
 
-    color: rgb(255, 255, 255);
+  color: rgb(255, 255, 255);
 }
 
 nav a.active {
-    padding-bottom: 13px;
+  padding-bottom: 13px;
 
-    border-bottom: 2px solid rgb(255, 255, 255);
+  border-bottom: 2px solid rgb(255, 255, 255);
 }
 
 .nav_buttons {
-    margin-top: -42px;
+  margin-top: -42px;
 
-    list-style-type: none;
+  list-style-type: none;
 }
 
 .nav_buttons li {
-    margin-right: 15px;
-    padding: 10px;
-    padding-right: 0px;
-    padding-left: 0px;
+  margin-right: 15px;
+  padding: 10px;
+  padding-right: 0px;
+  padding-left: 0px;
 
-    float: right;
-    text-align: center;
+  float: right;
+  text-align: center;
 }
 
 #nav_file {
-    margin-left: 20px;
+  margin-left: 20px;
 
-    display: block;
+  display: block;
 
-    font-size: 15px;
-    font-weight: bolder;
+  font-size: 15px;
+  font-weight: bolder;
 
-    color: rgb(134, 134, 134);
+  color: rgb(134, 134, 134);
 }
 
 /* page headers */
 
 .header_box {
-    background-color: rgb(46, 144, 201);
+  background-color: rgb(46, 144, 201);
 }
 
-.header_message, .header_name {
-    padding-left: 20px;
+.header_message,
+.header_name {
+  padding-left: 20px;
 
-    margin: 0;
+  margin: 0;
 }
 
 .header_message {
-    padding-top: 60px;
-    margin-bottom: 0px;
+  padding-top: 60px;
+  margin-bottom: 0px;
 
-    font-size: 20px;
+  font-size: 20px;
 
-    color: rgb(87, 87, 87);
+  color: rgb(87, 87, 87);
 }
 
 .header_name {
-    font-size: 35px;
+  font-size: 35px;
 
-    padding-bottom: 71px;
+  padding-bottom: 71px;
 }
 
 .header_image {
-    width: 48%;
+  width: 48%;
 
-    float: right;
+  float: right;
 }
 
 /* ----------- index page ----------- */
 
 .about_me_box {
-    padding: 20px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+  padding: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 
-    margin-top: 30px;
-    margin-right: 20px;
+  margin-top: 30px;
+  margin-right: 20px;
 
-    background-color: white;
-    border-radius: 0 5px 5px 0;
-    filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.507));
+  background-color: white;
+  border-radius: 0 5px 5px 0;
+  filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.507));
 }
 
 .page_buttons {
-    margin-left: 20px;
-    margin-top: 50px;
+  margin-left: 20px;
+  margin-top: 50px;
 }
 
 .index_page_buttons {
-    padding-top: 12px;
-    padding-bottom: 12px;
+  padding-top: 12px;
+  padding-bottom: 12px;
 
-    background-color: #2d2d2d;
-    border: none;
-    border-radius: 5px;
+  background-color: #2d2d2d;
+  border: none;
+  border-radius: 5px;
 
-    color: white;
-    width: 160px;
+  color: white;
+  width: 160px;
 
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 
-    display: block;
+  display: block;
 }
 
 #side_pfp {
-    margin-top: -145px;
-    margin-bottom: -65px;
-    float: right;
-    height: 210px;
+  margin-top: -145px;
+  margin-bottom: -65px;
+  float: right;
+  height: 210px;
 }
 
 .skills_box {
-    filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.507));
-    margin-top: -45px;
+  filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.507));
+  margin-top: -45px;
 }
 
 .skill_content {
-    margin-top: -190px;
-    margin-bottom: 100px;
+  margin-top: -190px;
+  margin-bottom: 100px;
 }
 
 .my_skills h2 {
-    margin-left: 20px;
-    filter: drop-shadow(0px 0px 0px);
-    color: black;
+  margin-left: 20px;
+  filter: drop-shadow(0px 0px 0px);
+  color: black;
 }
 
 .skills {
-    display: flex;
-    column-gap: 20px;
-    justify-content: center;
-    filter: drop-shadow(0px 0px 0px);
+  display: flex;
+  column-gap: 20px;
+  justify-content: center;
+  filter: drop-shadow(0px 0px 0px);
 }
 
 /* ----------- works page ----------- */
 
 .my_work_box {
-    margin-left: 20px;
-    margin-right: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .project_code {
-    padding: 20px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+  padding: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 
-    margin-top: 30px;
-    margin-right: 20px;
-    margin-bottom: 50px;
+  margin-top: 30px;
+  margin-right: 20px;
+  margin-bottom: 50px;
 
-    border-radius: 0 5px 5px 0;
+  border-radius: 0 5px 5px 0;
 
-    background-color: white;
+  background-color: white;
 }
 
 .work_links {
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
 }
 
 .project_card {
-    margin-left: 10%;
-    margin-bottom: 30px;    
-    border-radius: 5px;
-    width: 80%;
+  margin-left: 10%;
+  margin-bottom: 30px;
+  border-radius: 5px;
+  width: 80%;
 
-    background-color: #2d2d2d;
-    
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.507);
+  background-color: #2d2d2d;
+
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.507);
 }
 
-.project_card img{
-    width: 100%;
-    border-radius: 5px 5px 0 0;
+.project_card img {
+  width: 100%;
+  border-radius: 5px 5px 0 0;
 }
 
 .project_desc {
-    padding: 2px 16px;
+  padding: 2px 16px;
 }
 
 #open_tab {
-    width: 20px;
-    float: right;
-    margin-top: 15px;
+  width: 20px;
+  float: right;
+  margin-top: 15px;
 }
 
 /* ----------- contact page ----------- */
 
 .contact_details_box {
-    padding-top: 5px;
-    padding-bottom: 15px;
-    padding-left: 20px;
-    margin-top: 30px;
-    margin-right: 20px;
+  padding-top: 5px;
+  padding-bottom: 15px;
+  padding-left: 20px;
+  margin-top: 30px;
+  margin-right: 20px;
 
-    background-color: white;
-    border-radius: 0 5px 5px 0;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.507);
+  background-color: white;
+  border-radius: 0 5px 5px 0;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.507);
 }
 
 .contact_details_box p {
-    margin-top: 0px;
-    margin-bottom: 5px;
+  margin-top: 0px;
+  margin-bottom: 5px;
 }
 
 .send_email {
-    margin-top: 50px;
-    margin-left: 20px;
-    margin-right: 20px;
+  margin-top: 50px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 #email_pfp {
-    height: 75px;
-    border-radius: 50%;
-    float: right;
+  height: 75px;
+  border-radius: 50%;
+  float: right;
 }
 
-#enter_user_email, #enter_email_message {
-    border-radius: 5px;
-    border: none;
-    padding: 5px;
+#enter_user_email,
+#enter_email_message {
+  border-radius: 5px;
+  border: none;
+  padding: 5px;
 }
 
 #enter_user_email {
-    margin-top: 10px;
-    margin-bottom: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 #enter_email_message {
-    padding-bottom: 70px;
-    width: 96%;
+  padding-bottom: 70px;
+  width: 96%;
 }
 
 #email_send_button {
-    margin-top: 10px;
-    border-radius: 5px;   
-    padding-top: 3px;
-    padding-bottom: 3px;
-    width: 75px;
-    
-    float: right;
-    background: none;
-    border: none;
+  margin-top: 10px;
+  border-radius: 5px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  width: 75px;
 
-    background-color: #2d2d2d;
-    color: white;
+  float: right;
+  background: none;
+  border: none;
+
+  background-color: #2d2d2d;
+  color: white;
 }
 
 .social_media {
-    margin-top: 70px;
+  margin-top: 70px;
 }
 
 .social_content {
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-top: -190px;
-    margin-bottom: 100px;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: -190px;
+  margin-bottom: 100px;
 
-    filter: drop-shadow(0px 0px 0px);
+  filter: drop-shadow(0px 0px 0px);
 }
 
 .social_content h2 {
-    color: black;
+  color: black;
 }
 
 .socials {
-    display: flex;
-    column-gap: 20px;
-    justify-content: center; 
+  display: flex;
+  column-gap: 20px;
+  justify-content: center;
 
-    filter: drop-shadow(0px 0px 0px);
+  filter: drop-shadow(0px 0px 0px);
 }
