--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   display: flex;
   flex-direction: column;
 
-  background-image: url("images/noise.png");
+  background-image: url("noise.png");
   background-repeat: repeat;
   background-position: center;
   position: relative;
